--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2021,6 +2021,11 @@ Semantically, an import of $O_2$ into $O_1$ is equivalent to the verbatim inclus
 An OMS translation results in an \termref{OMS mapping} between the
 original and the renamed OMS.
 \end{note}
+\begin{note}
+Typically, the resulting \termref{OMS mapping} of a translation is surjective: the 
+symbols of the original OMS can be identified by the renaming, but no new symbols are
+added.
+\end{note}
 
   \termdefinition{OMS reduction}{\DOL structured OMS expressing the restriction of an \termref{OMS} to a smaller \termref{signature}.}
 
